# EnginerrUp

./: .gitignore  my_ros2_control_note.txt  nav.sh  pre.sh  readme  readme.md
install/: local_setup.sh  setup.sh
install/bubble_protocol/lib/bubble_protocol/: bcp_core  pyserial  test_cmd
install/bubble_protocol/share/bubble_protocol/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/linefit_ground_segmentation/share/linefit_ground_segmentation/: local_setup.sh  package.sh
install/linefit_ground_segmentation_ros/lib/linefit_ground_segmentation_ros/: ground_segmentation_node  ground_segmentation_test_node
install/linefit_ground_segmentation_ros/share/linefit_ground_segmentation_ros/: package.sh  package.xml
install/livox_ros_driver2/lib/livox_ros_driver2/: livox_ros_driver2_node
install/livox_ros_driver2/share/livox_ros_driver2/: package.sh
install/livox_sdk2/share/livox_sdk2/: package.sh
install/navi/share/navi/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/navi/share/navi/maps/: 9-room.pgm  (+2 more)
install/pcd2pgm/lib/pcd2pgm/: pcd2pgm
install/pcd2pgm/share/pcd2pgm/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/point_lio/lib/point_lio/: pointlio_mapping
install/point_lio/share/point_lio/: local_setup.sh  package.sh
log/: latest_build
src/rm_algorithm/armbot_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
src/rm_algorithm/engineer_bringup/: CMakeLists.txt  package.xml
src/rm_communication/: communication_rule.docx
src/rm_communication/bubble_interface/: README.md
src/rm_communication/bubble_protocol/: setup.cfg  setup.py
src/rm_controller/engineer_controller/: CMakeLists.txt  package.xml
src/rm_description/: CMakeLists.txt  package.xml
src/rm_description/launch/: display.launch.xml
src/rm_description/meshes/: camera1.STL  camera2.STL  footprint.STL  gripper_left.STL  gripper_right.STL  link2.STL  link4.STL  radar.STL
src/rm_description/rviz/: display.rviz
src/rm_description/urdf/: engineer.urdf.xacro  mechine_arm.urdf
src/rm_hardware/: CMakeLists.txt  engieer_hardware_interface.xml  package.xml
src/rm_hardware/include/rm_hardware/: engineer_driver.hpp  engineer_hardware_interface.hpp
src/rm_hardware/src/: engineer_hardware_interface.cpp  test_control.cpp
src/rm_localization/pcd2pgm/: CMakeLists.txt  README.md
src/rm_localization/point_lio/: CMakeLists.txt
src/rm_navigation/navi/: CMakeLists.txt
(+121 files in other folders)
